I forgot to make the appropriate change to the pom.  Thanks dj for pointing out my error.

--- a/opennms-import/pom.xml
+++ b/opennms-import/pom.xml
@@ -75,6 +75,11 @@
       <artifactId>opennms-test</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.opennms</groupId>
+      <artifactId>opennms-snmp-snmp4j</artifactId>
+      <scope>test</scope>
+    </dependency>
 
     <dependency>
       <groupId>castor</groupId>
