THis change to the pom should fix the issue with opennms-installer

--- a/opennms-import/pom.xml
+++ b/opennms-import/pom.xml
@@ -78,6 +78,8 @@
     <dependency>
       <groupId>org.opennms</groupId>
       <artifactId>opennms-snmp-snmp4j</artifactId>
+      <version>${project.version}</version>
+      <type>test-jar</type>
       <scope>test</scope>
     </dependency>
 
