--- a/opennms-webapp/src/main/webapp/WEB-INF/log4j.properties
+++ b/opennms-webapp/src/main/webapp/WEB-INF/log4j.properties
@@ -38,7 +38,7 @@ log4j.appender.UNCATEGORIZED.layout.ConversionPattern=%d %-5p [%t] %c: %m%n
 # Turn logging down on particularly version packages
 log4j.logger.org.springframework=INFO
 log4j.logger.org.hibernate=INFO
-log4j.logger.org.hibernate.sql=DEBUG
+log4j.logger.org.hibernate.SQL=DEBUG
 
 
 # Eventd
