--- a/opennms-dashboard/pom.xml
+++ b/opennms-dashboard/pom.xml
@@ -7,8 +7,8 @@
     </parent>
     <properties>
         <gwtVersion>1.3.3</gwtVersion>
-        <moduleName>org.opennms.netmgt.dashboard.DynaTable</moduleName>
-        <moduleHtml>DynaTable.html</moduleHtml>
+        <moduleName>org.opennms.dashboard.Dashboard</moduleName>
+        <moduleHtml>index.html</moduleHtml>
     </properties>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>opennms-dashboard</artifactId>
