Add a ROLE_DASHBOARD role and allow this to be the only role granted to a user (i.e.: do not grant ROLE_USER to every user). Remove the "tempuser" from the default users.xml. Remove users that don't exist in the shipping users.xml or magic-user.properties file from the roles in magic-users.properties. Add a "FrontPage" controller that is visited when a user goes to /opennms/, and it redirects to one a few different links.  Right now, it directs everyone to index.jsp, except those who have the ROLE_DASHBOARD role, who it sends to an OpenNMS logo (we don't have a real place to send them, yet).

--- a/opennms-daemon/src/main/filtered/etc/magic-users.properties
+++ b/opennms-daemon/src/main/filtered/etc/magic-users.properties
@@ -10,7 +10,9 @@
 #
 # The authorization roles set up here are all the roles available to the
 # system except for the default role: OpenNMS User.  All users belong to 
-# the OpenNMS User role, even the "magic" users defined in this file.  All 
+# the OpenNMS User role, even the "magic" users defined in this file, unless
+# they are a member of one or more roles in this file *and* all of the roles
+# they are a member of have "notInDefaultGroup" set to true.  All
 # other roles specify their own user list within this file.
 #
 ###########################################################################
@@ -39,7 +41,8 @@ roles=rtc, admin, rouser
 
 # This role allows a user to make RTC data posts.
 role.rtc.name=OpenNMS RTC Daemon
-role.rtc.users=rtc, admin
+role.rtc.users=rtc
+role.rtc.notInDefaultGroup=true
 
 # This role allows users access to configuration and 
 # administrative web pages.
@@ -48,4 +51,9 @@ role.admin.users=admin
 
 # This role disallows user write access
 role.rouser.name=OpenNMS Read-Only User
-role.rouser.users=rouser
+role.rouser.users=
+
+# This role allows access to the dashboard only
+role.dashboard.name=OpenNMS Dashboard User
+role.dashboard.users=
+role.dashboard.notInDefaultGroup=true
