--- a/opennms-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/opennms-webapp/src/main/webapp/WEB-INF/web.xml
@@ -1091,6 +1091,14 @@
         <servlet-name>dispatcher</servlet-name>
         <url-pattern>*.htm</url-pattern>
   </servlet-mapping>
+
+  <!-- Although this will be matched by the above *.htm url-pattern,
+       this servlet-mapping needs to be here because wildcard url-pattern
+       elements don't seem to work as a welcome-page entry. -->
+  <servlet-mapping>
+        <servlet-name>dispatcher</servlet-name>
+        <url-pattern>/frontPage.htm</url-pattern>
+  </servlet-mapping>
   
   <servlet-mapping>
         <servlet-name>dispatcher</servlet-name>
@@ -1134,4 +1142,12 @@
     <exception-type>java.lang.Throwable</exception-type>
     <location>/errors/unknownexception.jsp</location>
   </error-page>  
+  
+  <!-- the welcome-file elements need to point at a file that exists or
+       a non-wildcard url-pattern in a servlet-mapping element. -->
+  <welcome-file-list>
+    <welcome-file>frontPage.htm</welcome-file>
+    <welcome-file>index.jsp</welcome-file>
+  </welcome-file-list>
+  
 </web-app>
