--- a/opennms-webapp/pom.xml
+++ b/opennms-webapp/pom.xml
@@ -288,6 +288,14 @@
       <artifactId>extremecomponents</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.gwtwidgets</groupId>
+      <artifactId>gwt-widgets</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.gwtwidgets</groupId>
+      <artifactId>gwt-widgets-server</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring</artifactId>
     </dependency>
