--- a/pom.xml
+++ b/pom.xml
@@ -1133,6 +1133,19 @@ opennms.home = ${opennms.home}
         <version>1.0.1</version>
       </dependency>
       <dependency>
+        <groupId>org.gwtwidgets</groupId>
+        <artifactId>gwt-widgets</artifactId>
+        <version>0.1.3</version>
+        <!-- we use provided since this is copiled to javascript 
+              and need to not be included with opennms -->
+        <scope>provided</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.gwtwidgets</groupId>
+        <artifactId>gwt-widgets-server</artifactId>
+        <version>0.1.2</version>
+      </dependency>
+      <dependency>
         <groupId>groovy</groupId>
         <artifactId>groovy</artifactId>
         <version>1.0-jsr-06</version>    
