--- a/opennms-webapp/pom.xml
+++ b/opennms-webapp/pom.xml
@@ -97,6 +97,9 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>tomcat-maven-plugin</artifactId>
+        <configuration>
+          <path>/${artifactId}</path>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.codehaus.cargo</groupId>
