--- a/opennms-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/opennms-webapp/src/main/webapp/WEB-INF/web.xml
@@ -16,6 +16,7 @@
     <param-value>
         /WEB-INF/applicationContext-common.xml
     	classpath:/META-INF/opennms/applicationContext-dao.xml
+    	classpath:/META-INF/opennms/applicationContext-reporting.xml
     	classpath:/org/opennms/web/svclayer/applicationContext-svclayer.xml
         /WEB-INF/applicationContext-acegi-security.xml
     </param-value>
