- Set Acegi Security log level to INFO, as it can log a *lot* of stuff to DEBUG. - Comment-out line that sets org.hibernate.SQL to DEBUG with a comment about its usefulness when debugging.

--- a/opennms-webapp/src/main/webapp/WEB-INF/log4j.properties
+++ b/opennms-webapp/src/main/webapp/WEB-INF/log4j.properties
@@ -35,10 +35,13 @@ log4j.appender.UNCATEGORIZED.File=${opennms.logs.dir}/uncategorized.log
 log4j.appender.UNCATEGORIZED.layout=org.apache.log4j.PatternLayout
 log4j.appender.UNCATEGORIZED.layout.ConversionPattern=%d %-5p [%t] %c: %m%n
 
-# Turn logging down on particularly version packages
+# Turn logging down on particularly verbose packages
 log4j.logger.org.springframework=INFO
 log4j.logger.org.hibernate=INFO
-log4j.logger.org.hibernate.SQL=DEBUG
+log4j.logger.org.acegisecurity=INFO
+
+# It is useful to set org.hibernate.SQL=DEBUG to see hibernate's SQL queries 
+#log4j.logger.org.hibernate.SQL=DEBUG
 
 
 # Eventd
