improve style and layout of dashboard.. still a long way to go

--- a/opennms-webapp/pom.xml
+++ b/opennms-webapp/pom.xml
@@ -99,6 +99,7 @@
         <artifactId>tomcat-maven-plugin</artifactId>
         <configuration>
           <path>/${artifactId}</path>
+          <port>${tomcat.port}</port>
         </configuration>
       </plugin>
       <plugin>
