--- a/opennms-rrd/opennms-rrd-jrobin/pom.xml
+++ b/opennms-rrd/opennms-rrd-jrobin/pom.xml
@@ -14,6 +14,11 @@
       <scope>compile</scope>
     </dependency>
     <dependency>
+      <groupId>org.opennms</groupId>
+      <artifactId>opennms-test</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>org.jrobin</groupId>
       <artifactId>jrobin</artifactId>
       <scope>compile</scope>
