added support to multilink between elements of map

--- a/opennms-daemon/src/main/filtered/etc/map.properties
+++ b/opennms-daemon/src/main/filtered/etc/map.properties
@@ -185,43 +185,56 @@ severity.map=worst
 ###########################################################################
 
 # A comma-separated list of link keys.  A link.{KEY}.id 
-# link.{KEY}.speed 
+# link.{KEY}.speed (optional): the speed in byte of the link 
 # link.{KEY}.text 
 # link.{KEY}.width
 # link.{KEY}.dasharray (optional): define the outline style of the line. Valid values are 1,2,3... 
+# link.{KEY}.snmptype
+#
+# multilink.status: 'best' or 'worst'; if there are more then 1 same link between 2 elements, specify the status to get.
+# 					default value is best. 
+# Notice that you can specify more than 1 link with same snmptype, differing by speed
+
 
 #property must be set for each key in this property.
 links=ethernet,fastethernet,gigaethernet,serial,framerelay,isdn,dsl
 
 link.ethernet.id=0
 link.ethernet.text=Ethernet
-link.ethernet.speed=10
+link.ethernet.speed=10000000
 link.ethernet.width=1
-
+link.ethernet.snmptype=6
 
 link.fastethernet.id=1
 link.fastethernet.text= Fast Ethernet
-link.fastethernet.speed=100
+link.fastethernet.speed=100000000
 link.fastethernet.width=2
-
+link.fastethernet.snmptype=62
 
 link.gigaethernet.id=2
 link.gigaethernet.text= GigaBit Ethernet
-link.gigaethernet.speed=1000
+link.gigaethernet.speed=1000000000
 link.gigaethernet.width=3
+link.gigaethernet.snmptype=117
+
 
 link.serial.id=3
 link.serial.text= Serial Line
-link.serial.speed=64
+link.serial.speed=64000
 link.serial.width=1
-link.serial.dash-array=1
+link.serial.dash-array=3
+link.serial.snmptype=22
 
 
 link.framerelay.id=4
 link.framerelay.text= Frame Relay
-link.framerelay.speed=64
+link.framerelay.speed=64000
 link.framerelay.width=1
-link.framerelay.dash-array=3
+link.framerelay.dash-array=5
+link.framerelay.snmptype=32
+
+link.default=0
+multilink.status=best
 
 ###########################################################################
 ## L I N K  S T A T U S
@@ -245,7 +258,7 @@ linkstatus.down.flash=true
 # status.{KEY}.text property must be set for each key in this property.
 # Statuses must be ordered from worst to best (i.e.: nodedown.id < nodeup.id, etc.)
 
-statuses=nodeup,nodedown,interfacedown,servicedown,linkup,linkdown,undefined,open,ack,assigned
+statuses=nodeup,nodedown,interfacedown,servicedown,linkup,linkdown,undefined
 
 status.nodedown.id=0
 status.nodedown.color=red
@@ -282,25 +295,6 @@ status.linkup.uei=uei.opennms.org/generic/traps/SNMP_Link_Up
 status.linkup.color=green
 status.linkup.text=SNMPLinkUp
 
-status.open.id=7
-status.open.uei=OPEN
-status.open.color=red
-status.open.text=Alarm Open
-
-status.close.id=8
-status.close.uei=CLOSED
-status.close.color=green
-status.close.text=Alarm Closed
-
-status.ack.id=9
-status.ack.uei=ACK
-status.ack.color=orange
-status.ack.text=Alarm Acknowledged
-
-status.assigned.id=10
-status.assigned.uei=ASSIGNED
-status.assigned.color=yellow
-status.assigned.text=Alarm Assigned
 
 // status.default and status.unknown.uei are required values
 // they should be equals to defined statuses
