--- a/opennms-daemon/src/main/filtered/etc/magic-users.properties
+++ b/opennms-daemon/src/main/filtered/etc/magic-users.properties
@@ -37,7 +37,7 @@ user.rtc.password=rtc
 
 # A comma-separated list of role keys.  A role.{KEY}.name and 
 # role.{KEY}.users property must be set for each key in this property.
-roles=rtc, admin, rouser
+roles=rtc, admin, rouser, dashboard
 
 # This role allows a user to make RTC data posts.
 role.rtc.name=OpenNMS RTC Daemon
