Fix spacing of labels in cisco.dropsinout and cisco.pkts reports so that columns line up.

--- a/opennms-daemon/src/main/filtered/etc/snmp-graph.properties
+++ b/opennms-daemon/src/main/filtered/etc/snmp-graph.properties
@@ -1350,7 +1350,7 @@ report.cisco.dropsinout.command=--title="Cisco Packets Dropped In/Out" \
  GPRINT:dropin:AVERAGE:"Avg  \\: %8.2lf %s" \
  GPRINT:dropin:MIN:"Min  \\: %8.2lf %s" \
  GPRINT:dropin:MAX:"Max  \\: %8.2lf %s\\n" \
- AREA:dropoutNeg#0000ff:"In " \
+ AREA:dropoutNeg#0000ff:"Out" \
  GPRINT:dropout:AVERAGE:"Avg  \\: %8.2lf %s" \
  GPRINT:dropout:MIN:"Min  \\: %8.2lf %s" \
  GPRINT:dropout:MAX:"Max  \\: %8.2lf %s\\n"
@@ -1419,7 +1419,7 @@ report.cisco.pkts.command=--title="Cisco Packets In/Out" \
  DEF:pktsOut={rrd2}:locIfOutPktsSec:AVERAGE \
  CDEF:pktsOutNeg=0,pktsOut,- \
  AREA:pktsIn#00ff00:"In " \
- GPRINT:pktsIn:AVERAGE:" Avg  \\: %8.2lf %s" \
+ GPRINT:pktsIn:AVERAGE:"Avg  \\: %8.2lf %s" \
  GPRINT:pktsIn:MIN:"Min  \\: %8.2lf %s" \
  GPRINT:pktsIn:MAX:"Max  \\: %8.2lf %s\\n" \
  AREA:pktsOutNeg#0000ff:"Out" \
