Some more NSClient perfmon counters for collection, and graphs to  support the whole lot

--- a/opennms-daemon/src/main/filtered/etc/snmp-graph.properties
+++ b/opennms-daemon/src/main/filtered/etc/snmp-graph.properties
@@ -93,7 +93,10 @@ netsnmp.cpuUsage, \
 netsnmp.cpuStats, \
 free.memory,jvm.thread.count,jvm.thread.daemon,jvm.thread.peak, jboss.http.tp, jboss.defaultDS, \
 jboss.servletstatus.time, jboss.servletstatus.cnt, jboss.grp.tp, jboss.grp.time, jboss.grp.cnt, \
-airport.numClients
+airport.numClients,iisTraffic,iisRequests,exchangeMessages,exchangeBytes, \
+exchangeRecipPartitions,dnsThroughput,mssqlmemory,mssqlusage,mssqlhitratios,mssqllockwaittime, \
+windowsCPU,livecommsusers,livecommsmessages,mailmarshal
+
 
 
 
@@ -3643,4 +3646,273 @@ report.adsl.snr.command=--title="ADSL Noise Margin" \
  GPRINT:remoteEndSnrdB:MIN:"Min  \\: %8.2lf %s" \
  GPRINT:remoteEndSnrdB:MAX:"Max  \\: %8.2lf %s\\n"
 
+report.iisRequests.name=IIS Requests 
+report.iisRequests.columns=iisgetreq,iispostreq,iisheadreq,iiscgireq
+report.iisRequests.type=nodeSnmp
+report.iisRequests.command=--title="IIS Requests Stats" \
+ --lower-limit 0 \
+ DEF:gets={rrd1}:iisgetreq:AVERAGE \
+ DEF:posts={rrd2}:iispostreq:AVERAGE \
+ DEF:heads={rrd3}:iisheadreq:AVERAGE \
+ DEF:cgis={rrd4}:iiscgireq:AVERAGE \
+ LINE1:gets#0000FF:"Gets/s " \
+ GPRINT:gets:AVERAGE:"Avg:%4.2lf" \
+ GPRINT:gets:MAX:"Max:%4.2lf" \
+ GPRINT:gets:MIN:"Min:%4.2lf\\n" \
+ LINE1:posts#00FF00:"Posts/s" \
+ GPRINT:posts:AVERAGE:"Avg:%4.2lf" \
+ GPRINT:posts:MAX:"Max:%4.2lf" \
+ GPRINT:posts:MIN:"Min:%4.2lf \\n" \
+ LINE1:heads#FF0000:"Heads/s" \
+ GPRINT:heads:AVERAGE:"Avg:%4.2lf" \
+ GPRINT:heads:MAX:"Max:%4.2lf" \
+ GPRINT:heads:MIN:"Min:%4.2lf \\n" \
+ LINE1:cgis#000000:"CGIs/s " \
+ GPRINT:cgis:AVERAGE:"Avg:%4.2lf" \
+ GPRINT:cgis:MAX:"Max:%4.2lf" \
+ GPRINT:cgis:MIN:"Min:%4.2lf" 
+
+
+report.iisTraffic.name=IIS Traffic Stats
+report.iisTraffic.columns=iisbytes
+report.iisTraffic.type=nodeSnmp
+report.iisTraffic.command=--title="IIS Traffic Stats" \
+ --lower-limit 0 \
+ DEF:bytesTrans={rrd1}:iisbytes:AVERAGE \
+ CDEF:kbTrans=bytesTrans,1024,/ \
+ LINE2:kbTrans#0000FF:"KB/s " \
+ GPRINT:kbTrans:AVERAGE:"Avg: %3.2lf" \
+ GPRINT:kbTrans:MAX:"Max: %3.2lf" \
+ GPRINT:kbTrans:MIN:"Min: %3.2lf" 
+
+report.exchangeMessages.name=Exchange Message Volumes
+report.exchangeMessages.columns=exchangemsgsent,exchangemsgrecv,exchangemsgdeliv
+#report.exchangeMessages.columns=exchangemsgsent,exchangemsgdeliv
+report.exchangeMessages.type=nodeSnmp
+report.exchangeMessages.command=--title="Exchange Message Volumes" \
+ --lower-limit 0 \
+ DEF:outmsgs={rrd1}:exchangemsgsent:AVERAGE \
+ DEF:inmsgs={rrd2}:exchangemsgrecv:AVERAGE \
+ DEF:localdel={rrd3}:exchangemsgdeliv:AVERAGE \
+ LINE2:outmsgs#00FF00:"Messages Out/s:" \
+ GPRINT:outmsgs:AVERAGE:"Avg:%4.2lf" \
+ GPRINT:outmsgs:MAX:"Max:%4.2lf" \
+ GPRINT:outmsgs:MIN:"Min:%4.2lf\\n" \
+ LINE2:inmsgs#0000FF:"Messages In/s :" \
+ GPRINT:inmsgs:AVERAGE:"Avg:%4.2lf" \
+ GPRINT:inmsgs:MAX:"Max:%4.2lf" \
+ GPRINT:inmsgs:MIN:"Min:%4.2lf\\n" \
+ LINE2:localdel#FF0000:"Messages Delivered Locally/s :" \
+ GPRINT:localdel:AVERAGE:"Avg:%4.2lf" \
+ GPRINT:localdel:MAX:"Max:%4.2lf" \
+ GPRINT:localdel:MIN:"Min:%4.2lf\\n" 
+
+report.exchangeBytes.name=Exchange Byte Volumes
+report.exchangeBytes.columns=exchangebytesrecv,exchangebytessent
+report.exchangeBytes.type=nodeSnmp
+report.exchangeBytes.command=--title="Exchange Byte Volumes" \
+ --lower-limit 0 \
+ DEF:inbytes={rrd1}:exchangebytesrecv:AVERAGE \
+ DEF:outbytes={rrd2}:exchangebytessent:AVERAGE \
+ CDEF:inkbytes=inbytes,1024,/ \
+ CDEF:outkbytes=outbytes,1024,/ \
+ LINE2:inkbytes#0000FF:"KB In/s: " \
+ GPRINT:inkbytes:AVERAGE:"Avg:%4.2lf" \
+ GPRINT:inkbytes:MAX:"Max: %4.2lf" \
+ GPRINT:inkbytes:MIN:"Min: %4.2lf \\n" \
+ LINE2:outkbytes#00FF00:"KB Out/s:" \
+ GPRINT:outkbytes:AVERAGE:"Avg:%4.2lf" \
+ GPRINT:outkbytes:MAX:"Max: %4.2lf" \
+ GPRINT:outkbytes:MIN:"Min: %4.2lf\\n" 
+
+report.exchangeRecipPartitions.name=Exchange Recipient Partitions
+report.exchangeRecipPartitions.columns=exchangereciplocal,exchangerecipremote
+report.exchangeRecipPartitions.type=nodeSnmp
+report.exchangeRecipPartitions.command=--title="Exchange Recipients" \
+ --lower-limit 0 --upper-limit 100 \
+ DEF:local={rrd1}:exchangereciplocal:AVERAGE \
+ DEF:remote={rrd2}:exchangerecipremote:AVERAGE \
+ LINE2:local#0000FF:"% Recipients Local: " \
+ GPRINT:local:AVERAGE:"Avg:%4.1lf" \
+ GPRINT:local:MAX:"Max:%4.1lf" \
+ GPRINT:local:MIN:"Min:%4.1lf \\n" \
+ LINE2:remote#00FF00:"% Recipients Remote:" \
+ GPRINT:remote:AVERAGE:"Avg:%4.1lf" \
+ GPRINT:remote:MAX:"Max:%4.1lf" \
+ GPRINT:remote:MIN:"Min:%4.1lf\\n"
+
+report.dnsThroughput.name=DNS Throughput
+report.dnsThroughput.columns=dnsqueryrecv,dnsresponsesent
+report.dnsThroughput.type=nodeSnmp
+report.dnsThroughput.command=--title="DNS Throughput" \
+ DEF:query={rrd1}:dnsqueryrecv:AVERAGE \
+ DEF:response={rrd2}:dnsresponsesent:AVERAGE \
+ LINE2:query#0000FF:"Queries/s:  " \
+ GPRINT:query:AVERAGE:"Avg:%4.1lf" \
+ GPRINT:query:MAX:"Max: %4.1lf" \
+ GPRINT:query:MIN:"Min: %4.1lf \\n" \
+ LINE2:response#00FF00:"Responses/s:" \
+ GPRINT:response:AVERAGE:"Avg:%4.1lf" \
+ GPRINT:response:MAX:"Max: %4.1lf" \
+ GPRINT:response:MIN:"Min: %4.1lf \\n" 
+
+report.mssqlmemory.name=MSSQL Memory
+report.mssqlmemory.columns=sqlconnmemory,sqllockmemory,sqloptmemory,sqlsqlcachememory,sqltargetmemory,sqltotalmemory
+report.mssqlmemory.type=nodeSnmp
+report.mssqlmemory.command=--title="MSSQL Memory" \
+ --lower-limit 0 \
+ DEF:conn={rrd1}:sqlconnmemory:AVERAGE \
+ DEF:lock={rrd2}:sqllockmemory:AVERAGE \
+ DEF:opt={rrd3}:sqloptmemory:AVERAGE \
+ DEF:sqlcache={rrd4}:sqlsqlcachememory:AVERAGE \
+ DEF:target={rrd5}:sqltargetmemory:AVERAGE \
+ DEF:total={rrd6}:sqltotalmemory:AVERAGE \
+ AREA:lock#00FF00:"Lock :" \
+ GPRINT:lock:AVERAGE:"Avg:%4.1lf" \
+ STACK:opt#0000FF:"Optimizer :" \
+ GPRINT:opt:AVERAGE:"Avg:%4.1lf" \
+ STACK:sqlcache#FFFF00:"SQL Cache :" \
+ GPRINT:sqlcache:AVERAGE:"Avg:%4.1lf\\n" \
+ STACK:conn#FF0000:"Conn :" \
+ GPRINT:conn:AVERAGE:"Avg:%4.1lf" \
+ LINE2:target#00FFFF:"Target :" \
+ GPRINT:target:AVERAGE:"Avg:%4.1lf" \
+ LINE2:total#000000:"Actual:" \
+ GPRINT:total:AVERAGE:"Avg:%4.1lf\\n" 
+
+report.mssqlusage.name=MSSQL Usage
+report.mssqlusage.columns=sqluserconn,sqlactivetrans
+report.mssqlusage.type=nodeSnmp
+report.mssqlusage.command=--title="MSSQL Usage" \
+ DEF:conns={rrd1}:sqluserconn:AVERAGE \
+ DEF:trans={rrd2}:sqlactivetrans:AVERAGE \
+ LINE2:conns#0000FF:"Connections :" \
+ GPRINT:conns:AVERAGE:"Avg:%4.1lf" \
+ GPRINT:conns:MAX:"Max:%4.1lf" \
+ GPRINT:conns:MIN:"Min:%4.1lf \\n" \
+ LINE2:trans#00FF00:"Transactions :" \
+ GPRINT:trans:AVERAGE:"Avg:%4.1lf" \
+ GPRINT:trans:MAX:"Max:%4.1lf" \
+ GPRINT:trans:MIN:"Min:%4.1lf"
+
+report.mssqlhitratios.name=MSSQL Hit Ratios
+report.mssqlhitratios.columns=sqlbuffhitratio,sqlcachehitratio,sqllogcachehitratio
+report.mssqlhitratios.type=nodeSnmp
+report.mssqlhitratios.command=--title="MSSQL Hit Ratios" \
+ --lower-limit 0 \
+ DEF:buff={rrd1}:sqlbuffhitratio:AVERAGE \
+ DEF:cache={rrd2}:sqlcachehitratio:AVERAGE \
+ DEF:logcache={rrd3}:sqllogcachehitratio:AVERAGE \
+ LINE2:buff#0000FF:"Buffer Hit Ratio :" \
+ GPRINT:buff:AVERAGE:"Avg:%4.1lf" \
+ GPRINT:buff:MAX:"Max:%4.1lf" \
+ GPRINT:buff:MIN:"Min:%4.1lf" \
+ LINE2:cache#00FF00:"Cache Hit Ratio :" \
+ GPRINT:cache:AVERAGE:"Avg:%4.1lf" \
+ GPRINT:cache:MAX:"Max:%4.1lf" \
+ GPRINT:cache:MIN:"Min:%4.1lf" \
+ LINE2:logcache#FF0000:"Log Cache Hit Ratio :" \
+ GPRINT:logcache:AVERAGE:"Avg:%4.1lf" \
+ GPRINT:logcache:MAX:"Max:%4.1lf" \
+ GPRINT:logcache:MIN:"Min:%4.1lf" \
+
+report.mssqllockwaittime.name=MSSQL Lock Wait Time
+report.mssqllockwaittime.columns=sqllockavgwaittime
+report.mssqllockwaittime.type=nodeSnmp
+report.mssqllockwaittime.command=--title="MSSQL Lock Avg Wait Time" \
+ DEF:wait={rrd1}:sqllockavgwaittime:AVERAGE \
+ LINE2:wait#0000FF:"Lock Avg Wait Time :" \
+ GPRINT:wait:AVERAGE:"Avg:%4.1lf" 
+ 
+report.windowsCPU.name=Windows CPU stats
+report.windowsCPU.columns=cpuProcTime,cpuIntrTime,cpuPrivTime,cpuUserTime
+report.windowsCPU.type=nodeSnmp
+report.windowsCPU.command=--title="Windows CPU stats" \
+ --lower-limit 0 --upper-limit 100 \
+ DEF:proc={rrd1}:cpuProcTime:AVERAGE \
+ DEF:intr={rrd2}:cpuIntrTime:AVERAGE \
+ DEF:priv={rrd3}:cpuPrivTime:AVERAGE \
+ DEF:user={rrd4}:cpuUserTime:AVERAGE \
+ LINE2:intr#FF00FF:"Interrupt time % :" \
+ GPRINT:intr:AVERAGE:"Avg:%3.1lf" \
+ GPRINT:intr:MAX:"Max:%3.1lf" \
+ GPRINT:intr:MIN:"Min:%3.1lf \\n" \
+ LINE2:priv#FF0000:"Privileged time %:" \
+ GPRINT:priv:AVERAGE:"Avg:%3.1lf" \
+ GPRINT:priv:MAX:"Max:%3.1lf" \
+ GPRINT:priv:MIN:"Min:%3.1lf \\n" \
+ LINE2:user#00FF00:"User time %      :" \
+ GPRINT:user:AVERAGE:"Avg:%3.1lf" \
+ GPRINT:user:MAX:"Max:%3.1lf" \
+ GPRINT:user:MIN:"Min:%3.1lf \\n" \
+ LINE1:proc#000000:"Total Usage %    :" \
+ GPRINT:proc:AVERAGE:"Avg:%3.1lf" \
+ GPRINT:proc:MAX:"Max:%3.1lf" \
+ GPRINT:proc:MIN:"Min:%3.1lf"
+
+report.windowsProc.name=Windows Procs and Threads
+report.windowsProc.columns=winProcQueueLength,winProcesses,winThreads
+report.windowsProc.type=nodeSnmp
+report.windowsProc.command=--title="Windows Processes & Threads" \
+ --lower-limit 0 \
+ DEF:queue={rrd1}:winProcQueueLength:AVERAGE \
+ DEF:proc={rrd2}:winProcesses:AVERAGE \
+ DEF:thread={rrd3}:winThreads:AVERAGE \
+ CDEF:lqueue=lqueue,10,* \
+ CDEF:sthread=thread,10,/ \
+ LINE2:lqueue#0000FF:"Processor queue length:" \
+ GPRINT:queue:AVERAGE:"Avg:%3.1lf" \
+ GPRINT:queue:MAX:"Max:%3.1lf" \
+ GPRINT:queue:MIN:"Min:%3.1lf" \
+ LINE2:sthread#0000FF:"Threads:" \
+ GPRINT:thread:AVERAGE:"Avg:%3.1lf" \
+ GPRINT:thread:MAX:"Max:%3.1lf" \
+ GPRINT:thread:MIN:"Min:%3.1lf" \
+ LINE2:proc#0000FF:"Processes:" \
+ GPRINT:proc:AVERAGE:"Avg:%3.1lf" \
+ GPRINT:proc:MAX:"Max:%3.1lf" \
+ GPRINT:proc:MIN:"Min:%3.1lf" 
+
+report.livecommsusers.name=Live Communications Server Users
+report.livecommsusers.columns=lcsusers
+report.livecommsusers.type=nodeSnmp
+report.livecommsusers.command=--title="Live Communications Server users" \
+ --lower-limit 0 \
+ DEF:users={rrd1}:lcsusers:AVERAGE \
+ LINE2:users#0000FF:"Connected users:" \
+ GPRINT:users:AVERAGE:"Avg:%3.0lf" \
+ GPRINT:users:MAX:"Max:%3.0lf" \
+ GPRINT:users:MIN:"Min:%3.0lf" 
+
+report.livecommsmessages.name=Live Communications Server Messages 
+report.livecommsmessages.columns=lcsmessages
+report.livecommsmessages.type=nodeSnmp
+report.livecommsmessages.command=--title="Live Communications Server Messages" \
+ --lower-limit 0 \
+ DEF:messages={rrd1}:lcsmessages:AVERAGE \
+ LINE2:messages#0000FF:"Messages/s:" \
+ GPRINT:messages:AVERAGE:"Avg:%3.4lf" \
+ GPRINT:messages:MAX:"Max:%3.4lf" \
+ GPRINT:messages:MIN:"Min:%3.4lf" 
+
+report.mailmarshal.name=Mail Marshal Stats
+report.mailmarshal.columns=mmruleimposed,mmvirusdetect,relayattempts
+report.mailmarshal.type=nodeSnmp
+report.mailmarshal.command=--title="MailMarshal Stats" \
+ --lower-limit 0 \
+ DEF:blocked={rrd1}:mmruleimposed:AVERAGE \
+ DEF:virus={rrd2}:mmvirusdetect:AVERAGE \
+ DEF:relay={rrd3}:relayattempts:AVERAGE \
+ LINE2:blocked#0000FF:"Messages blocked/s:" \
+ GPRINT:blocked:AVERAGE:"Avg:%3.2lf" \
+ GPRINT:blocked:MAX:"Max:%3.2lf" \
+ GPRINT:blocked:MIN:"Min:%3.2lf" \
+ LINE2:virus#00FF00:"Viruses blocked/s:" \
+ GPRINT:virus:AVERAGE:"Avg:%3.2lf" \
+ GPRINT:virus:MAX:"Max:%3.2lf" \
+ GPRINT:virus:MIN:"Min:%3.2lf" \
+ LINE2:relay#FF0000:"Relay Attempts/s:" \
+ GPRINT:relay:AVERAGE:"Avg:%3.2lf" \
+ GPRINT:relay:MAX:"Max:%3.2lf" \
+ GPRINT:relay:MIN:"Min:%3.2lf" 
 ## EOF
