--- a/pom.xml
+++ b/pom.xml
@@ -1529,6 +1529,11 @@ opennms.home = ${opennms.home}
         <artifactId>xmlrpc</artifactId>
         <version>2.0.1</version>
       </dependency>
+      <dependency>
+	<groupId>jep</groupId>
+	<artifactId>jep</artifactId>
+	<version>2.40</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
   <repositories>
