Threshold Expressions, Custom UEIs for trigger and re-arm, and a Web-UI for the same

--- a/opennms-services/pom.xml
+++ b/opennms-services/pom.xml
@@ -250,5 +250,9 @@
       <groupId>quartz</groupId>
       <artifactId>quartz</artifactId>
     </dependency>
+    <dependency>
+      <groupId>jep</groupId>
+      <artifactId>jep</artifactId>
+    </dependency>
   </dependencies>
 </project>
