Maps: added Unknown link status and setted as default

--- a/opennms-daemon/src/main/filtered/etc/map.properties
+++ b/opennms-daemon/src/main/filtered/etc/map.properties
@@ -233,7 +233,15 @@ link.framerelay.width=1
 link.framerelay.dash-array=5
 link.framerelay.snmptype=32
 
-link.default=0
+
+link.framerelay.id=5
+link.framerelay.text= Unknown
+link.framerelay.speed=unknown
+link.framerelay.width=1
+link.framerelay.dash-array=1
+link.framerelay.snmptype=0
+
+link.default=5
 multilink.status=best
 
 ###########################################################################
