cut down on importer logging of snmp and capsd work during import

--- a/opennms-daemon/src/main/filtered/etc/log4j.properties
+++ b/opennms-daemon/src/main/filtered/etc/log4j.properties
@@ -275,6 +275,8 @@ log4j.appender.XMLRPCD.layout.ConversionPattern=%d %-5p [%t] %c{1}: %m%n
 
 # ModelImporter
 log4j.category.ModelImporter=DEBUG, IMPORTER
+log4j.category.ModelImporter.org.opennms.netmgt.capsd=INFO, IMPORTER
+log4j.category.ModelImporter.org.opennms.netmgt.snmp=INFO, IMPORTER
 log4j.additivity.ModelImporter=false
 log4j.appender.IMPORTER=org.apache.log4j.RollingFileAppender
 log4j.appender.IMPORTER.MaxFileSize=100MB
