--- a/opennms-rrd/opennms-rrd-rrdtool/opennms-rrdtool-api/pom.xml
+++ b/opennms-rrd/opennms-rrd-rrdtool/opennms-rrdtool-api/pom.xml
@@ -13,5 +13,14 @@
       <artifactId>opennms-rrd-api</artifactId>
       <scope>compile</scope>
     </dependency>
+    <dependency>
+      <groupId>org.opennms</groupId>
+      <artifactId>opennms-test</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring</artifactId>
+    </dependency>
   </dependencies>
 </project>
