--- a/opennms-rrd/opennms-rrd-jrobin/pom.xml
+++ b/opennms-rrd/opennms-rrd-jrobin/pom.xml
@@ -23,5 +23,9 @@
       <artifactId>jrobin</artifactId>
       <scope>compile</scope>
     </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring</artifactId>
+    </dependency>
   </dependencies>
 </project>
