Add BeanUtils class for helping methods with Spring.  Mostly Java 5 generics static methods to make things easier and cleaner.

--- a/opennms-util/pom.xml
+++ b/opennms-util/pom.xml
@@ -7,4 +7,10 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>opennms-util</artifactId>
   <name>OpenNMS Utilities</name>
+  <dependencies>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring</artifactId>
+    </dependency>
+  </dependencies>
 </project>
