change prioritize default to false since it increases performance significanlty

--- a/opennms-daemon/src/main/filtered/etc/rrd-configuration.properties
+++ b/opennms-daemon/src/main/filtered/etc/rrd-configuration.properties
@@ -89,8 +89,12 @@
 # the queuing system will prioritize non-zero valued updates over zero valued updates.
 # If it is false then all updates will be counted as significant.
 #
-# The default setting is 'true' (mark non-zero data as significant and zero as insignificant
-#org.opennms.rrd.queuing.prioritizeSignificatUpdates=true
+# The default setting is 'false' (mark non-zero data as significant and zero as insignificant
+#
+# Note: A misspelling of the work Significant was discovered and fixed here.. if this is not working
+# properly for you in make sure you are spelling significant correctly.
+#
+#org.opennms.rrd.queuing.prioritizeSignificantUpdates=false
 
 # This property represents the number of seconds over which (on average) all
 # insignificant files will be promoted to the significant list.  This ensures that
