Move daemon and webapp logs into separate directories.  Fix for bugzilla bug #1506.

--- a/opennms-daemon/src/main/filtered/etc/events.archiver.properties
+++ b/opennms-daemon/src/main/filtered/etc/events.archiver.properties
@@ -27,7 +27,7 @@ log4j.additivity.OpenNMS.Archiver.Events=false
 log4j.appender.EVENTS_ARCHIVER=org.apache.log4j.RollingFileAppender
 log4j.appender.EVENTS_ARCHIVER.MaxFileSize=100MB
 log4j.appender.EVENTS_ARCHIVER.MaxBackupIndex=4
-log4j.appender.EVENTS_ARCHIVER.File=@install.logs.dir@/events.archiver.log
+log4j.appender.EVENTS_ARCHIVER.File=@install.daemonlogs.dir@/events.archiver.log
 log4j.appender.EVENTS_ARCHIVER.layout=org.apache.log4j.PatternLayout
 log4j.appender.EVENTS_ARCHIVER.layout.ConversionPattern=%d %-5p [%t] %c{1}: %m%n
  
