--- a/opennms-webapp/src/main/web-filtered/WEB-INF/configuration.properties
+++ b/opennms-webapp/src/main/web-filtered/WEB-INF/configuration.properties
@@ -1,6 +1,6 @@
 opennms.home=@install.dir@/
 opennms.bin.dir=@install.bin.dir@
-opennms.logs.dir=@install.logs.dir@
+opennms.webapplogs.dir=@install.webapplogs.dir@
 opennms.report.dir=@install.share.dir@/reports
 java.awt.headless=true
 opennms.db.poolman=org.opennms.core.resource.db.SimpleDbConnectionFactory
