--- a/opennms-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/opennms-webapp/src/main/webapp/WEB-INF/web.xml
@@ -11,6 +11,13 @@
   	<param-value>true</param-value>
   </context-param>
 
+  <!--  This is used by the Spring Log4jConfigListener <listener> below -->
+  <context-param>
+    <param-name>log4jConfigLocation</param-name>
+    <param-value>/WEB-INF/log4j.properties</param-value>
+  </context-param>
+
+  <!--  This is used by the Spring ContextLoaderListener <listener> below -->
   <context-param>
     <param-name>contextConfigLocation</param-name>
     <param-value>
@@ -20,11 +27,6 @@
     	classpath:/org/opennms/web/svclayer/applicationContext-svclayer.xml
         /WEB-INF/applicationContext-acegi-security.xml
     </param-value>
-  </context-param>
-
-  <context-param>
-    <param-name>log4jConfigLocation</param-name>
-    <param-value>/WEB-INF/log4j.properties</param-value>
   </context-param>
   
   <!-- Database parameters -->  
@@ -109,7 +111,6 @@
     <filter-class>org.extremecomponents.table.filter.ExportFilter</filter-class>
   </filter>
   
-
   <filter-mapping>
     <filter-name>Acegi Filter Chain Proxy</filter-name>
     <url-pattern>/*</url-pattern>
@@ -164,11 +165,11 @@
   </listener>
 
   <listener>
-        <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
+    <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
   </listener>
 
   <listener>
-        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+    <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
   </listener>
 
   <!--  servlet that gwt rpc requests get mapped to -->
