Implement an RrdDao and move it and the ResourceDao to applicationContext-dao.xml. String property and external value loading is now done by the ResourceType classes instead of being done in DefaultRrdGraphService.

--- a/opennms-daemon/src/main/filtered/etc/opennms.properties
+++ b/opennms-daemon/src/main/filtered/etc/opennms.properties
@@ -50,3 +50,9 @@
 # host.
 #
 #java.rmi.server.hostname=<some server ip address>
+
+# RRD base directory 
+rrd.base.dir=@install.share.dir@/rrd
+
+# RRD binary path (only used if the JniRrdStrategy is used)
+rrd.binary=@install.rrdtool.bin@
