--- a/opennms-services/pom.xml
+++ b/opennms-services/pom.xml
@@ -44,16 +44,7 @@
     </dependency>
     <dependency>
       <groupId>org.opennms</groupId>
-      <artifactId>opennms-snmp-api</artifactId>
-      <version>${project.version}</version>
-      <type>test-jar</type>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.opennms</groupId>
-      <artifactId>opennms-snmp-snmp4j</artifactId>
-      <version>${project.version}</version>
-      <type>test-jar</type>
+      <artifactId>mock-snmp-agent</artifactId>
       <scope>test</scope>
     </dependency>
     <dependency>
