--- a/opennms-services/src/test/resources/org/opennms/netmgt/snmp/snmpTestData1.properties
+++ b/opennms-services/src/test/resources/org/opennms/netmgt/snmp/snmpTestData1.properties
@@ -1690,7 +1690,7 @@
 .1.3.6.1.2.1.25.5.1.1.2.227 = INTEGER: 0
 .1.3.6.1.2.1.25.5.1.1.2.235 = INTEGER: 0
 .1.3.6.1.2.1.25.5.1.1.2.237 = INTEGER: 0
-.1.3.6.1.2.1.25.5.1.1.2.239 = INTEGER: 0
+.1.1.6.1.2.1.25.5.1.1.2.239 = INTEGER: 0
 .1.3.6.1.2.1.25.5.1.1.2.251 = INTEGER: 0
 .1.3.6.1.2.1.25.5.1.1.2.261 = INTEGER: 0
 .1.3.6.1.2.1.25.5.1.1.2.265 = INTEGER: 0
@@ -1731,3 +1731,8 @@
 .1.3.6.1.2.1.25.5.1.1.2.686 = INTEGER: 0
 .1.3.6.1.2.1.25.5.1.1.2.687 = INTEGER: 0
 .1.3.6.1.2.1.25.5.1.1.2.717 = INTEGER: 0
+#
+# Added by hand by dj@opennms.org
+#
+.1.3.6.1.2.1.31.1.1.1.1.1 = STRING: There's no place like 127.0.0.1
+.1.3.6.1.2.1.31.1.1.1.18.1 = STRING: We don't need no stinkin' ifAlias!
