Fix the capitalization of targetJdk so that the Maven PMD plugin works with our Java 1.5 code

--- a/pom.xml
+++ b/pom.xml
@@ -418,7 +418,7 @@ opennms.home = ${opennms.home}
       <plugin>
         <artifactId>maven-pmd-plugin</artifactId>
          <configuration>
-            <targetjdk>1.5</targetjdk>
+            <targetJdk>1.5</targetJdk>
             <rulesets>
                <ruleset>/rulesets/basic.xml</ruleset>
                <ruleset>/rulesets/controversial.xml</ruleset>
