add jrobin as a dependency so the tests pass

--- a/opennms-import/pom.xml
+++ b/opennms-import/pom.xml
@@ -77,6 +77,16 @@
     </dependency>
     <dependency>
       <groupId>org.opennms</groupId>
+      <artifactId>opennms-rrd-api</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.opennms</groupId>
+      <artifactId>opennms-rrd-jrobin</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.opennms</groupId>
       <artifactId>mock-snmp-agent</artifactId>
       <scope>test</scope>
     </dependency>
