--- a/pom.xml
+++ b/pom.xml
@@ -1131,6 +1131,11 @@ opennms.home = ${opennms.home}
         <version>1.0.4</version>
       </dependency>
       <dependency>
+        <groupId>concurrent</groupId>
+        <artifactId>concurrent</artifactId>
+        <version>1.3.4</version>
+      </dependency>
+      <dependency>
         <groupId>org.easymock</groupId>
         <artifactId>easymock</artifactId>
         <version>2.2</version>
@@ -1499,17 +1504,20 @@ opennms.home = ${opennms.home}
         <artifactId>oro</artifactId>
         <version>2.0.8</version>
       </dependency>
-      
       <dependency>
-        <groupId>quartz</groupId>
-        <artifactId>quartz</artifactId>
-        <version>1.5.1</version>
+        <groupId>poi</groupId>
+        <artifactId>poi</artifactId>
+        <version>2.5.1</version>
       </dependency>
-      
       <dependency>
         <groupId>postgresql</groupId>
         <artifactId>postgresql</artifactId>
         <version>8.1-407.jdbc3</version>
+      </dependency>
+      <dependency>
+        <groupId>quartz</groupId>
+        <artifactId>quartz</artifactId>
+        <version>1.5.1</version>
       </dependency>
       <dependency>
         <groupId>struts</groupId>
